--- a/examples/vue-3-cli/package.json
+++ b/examples/vue-3-cli/package.json
@@ -17,6 +17,7 @@
     "@storybook/addon-actions": "6.2.0-alpha.23",
     "@storybook/addon-essentials": "6.2.0-alpha.23",
     "@storybook/addon-links": "6.2.0-alpha.23",
+    "@storybook/addon-storyshots": "6.2.0-alpha.23",
     "@storybook/vue3": "6.2.0-alpha.23",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
@@ -24,6 +25,7 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-loader": "^8.2.2",
     "typescript": "~3.9.3",
+    "vue-jest": "^5.0.0-alpha.8",
     "vue-loader": "^16.1.2"
   }
 }
