--- a/lib/core/package.json
+++ b/lib/core/package.json
@@ -39,8 +39,7 @@
   },
   "dependencies": {
     "@storybook/core-client": "6.2.0-alpha.20",
-    "@storybook/core-server": "6.2.0-alpha.20",
-    "fork-ts-checker-webpack-plugin": "^6.0.4"
+    "@storybook/core-server": "6.2.0-alpha.20"
   },
   "peerDependencies": {
     "@storybook/builder-webpack4": "6.2.0-alpha.20",
