--- a/lib/builder-webpack4/package.json
+++ b/lib/builder-webpack4/package.json
@@ -65,6 +65,7 @@
     "@storybook/ui": "6.2.0-alpha.24",
     "@types/glob-base": "^0.3.0",
     "@types/micromatch": "^4.0.1",
+    "@types/html-webpack-plugin": "^3.2.4",
     "@types/node": "^14.0.10",
     "@types/node-fetch": "^2.5.7",
     "@types/webpack": "^4.41.26",
