--- a/lib/builder-webpack5/package.json
+++ b/lib/builder-webpack5/package.json
@@ -59,6 +59,7 @@
     "@storybook/core-common": "6.2.0-alpha.24",
     "@storybook/node-logger": "6.2.0-alpha.24",
     "@storybook/theming": "6.2.0-alpha.24",
+    "@types/html-webpack-plugin": "^3.2.4",
     "@types/glob-base": "^0.3.0",
     "@types/micromatch": "^4.0.1",
     "@types/node": "^14.0.10",
