--- a/package.json
+++ b/package.json
@@ -187,6 +187,7 @@
     "node-fetch": "^2.6.1",
     "npmlog": "^4.1.2",
     "p-limit": "^2.3.0",
+    "postcss-loader": "^4.2.0",
     "prettier": "~2.2.1",
     "prompts": "^2.4.0",
     "raf": "^3.4.1",
