--- a/addons/storyshots/storyshots-core/package.json
+++ b/addons/storyshots/storyshots-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/addon-storyshots",
-  "version": "6.2.0-alpha.24",
+  "version": "6.2.0-alpha.25",
   "description": "Take a code snapshot of every story automatically with Jest",
   "keywords": [
     "addon",
@@ -40,9 +40,9 @@
   },
   "dependencies": {
     "@jest/transform": "^26.6.2",
-    "@storybook/addons": "6.2.0-alpha.24",
-    "@storybook/client-api": "6.2.0-alpha.24",
-    "@storybook/core": "6.2.0-alpha.24",
+    "@storybook/addons": "6.2.0-alpha.25",
+    "@storybook/client-api": "6.2.0-alpha.25",
+    "@storybook/core": "6.2.0-alpha.25",
     "@types/glob": "^7.1.3",
     "@types/jest": "^25.2.3",
     "@types/jest-specific-snapshot": "^0.5.3",
@@ -58,10 +58,10 @@
     "ts-dedent": "^2.0.0"
   },
   "devDependencies": {
-    "@storybook/addon-docs": "6.2.0-alpha.24",
-    "@storybook/angular": "6.2.0-alpha.24",
-    "@storybook/react": "6.2.0-alpha.24",
-    "@storybook/vue3": "6.2.0-alpha.24",
+    "@storybook/addon-docs": "6.2.0-alpha.25",
+    "@storybook/angular": "6.2.0-alpha.25",
+    "@storybook/react": "6.2.0-alpha.25",
+    "@storybook/vue3": "6.2.0-alpha.25",
     "babel-loader": "^8.2.2",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.1",
@@ -81,9 +81,9 @@
     "react": "^16.8.0 || ^17.0.0",
     "react-dom": "^16.8.0 || ^17.0.0",
     "rxjs": "*",
+    "svelte": "*",
     "vue": "*",
-    "vue-jest": "*",
-    "svelte": "*"
+    "vue-jest": "*"
   },
   "peerDependenciesMeta": {
     "@storybook/angular": {
