--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -490,7 +490,7 @@ jobs:
           at: .
       - run:
           name: Test
-          command: yarn test --coverage --w2 --core
+          command: yarn test --coverage --runInBand --ci
       - persist_to_workspace:
           root: .
           paths:
