--- a/lib/core-common/package.json
+++ b/lib/core-common/package.json
@@ -58,6 +58,7 @@
     "@babel/preset-typescript": "^7.12.7",
     "@babel/register": "^7.12.1",
     "@storybook/node-logger": "6.2.0-rc.1",
+    "@storybook/semver": "^7.3.2",
     "@types/glob-base": "^0.3.0",
     "@types/micromatch": "^4.0.1",
     "@types/node": "^14.0.10",
