--- a/lib/components/package.json
+++ b/lib/components/package.json
@@ -42,6 +42,7 @@
     "@storybook/theming": "6.2.0-rc.1",
     "@types/overlayscrollbars": "^1.12.0",
     "@types/react-syntax-highlighter": "11.0.5",
+    "color-convert": "^2.0.1",
     "core-js": "^3.8.2",
     "fast-deep-equal": "^3.1.3",
     "global": "^4.4.0",
