--- a/lib/components/package.json
+++ b/lib/components/package.json
@@ -40,6 +40,7 @@
     "@storybook/client-logger": "6.2.0-rc.1",
     "@storybook/csf": "0.0.1",
     "@storybook/theming": "6.2.0-rc.1",
+    "@types/color-convert": "^2.0.0",
     "@types/overlayscrollbars": "^1.12.0",
     "@types/react-syntax-highlighter": "11.0.5",
     "color-convert": "^2.0.1",
