--- a/lib/core-server/package.json
+++ b/lib/core-server/package.json
@@ -61,6 +61,7 @@
     "chalk": "^4.1.0",
     "cli-table3": "0.6.0",
     "commander": "^6.2.1",
+    "compression": "^1.7.4",
     "core-js": "^3.8.2",
     "cpy": "^8.1.1",
     "css-loader": "^3.6.0",
@@ -95,6 +96,7 @@
   "devDependencies": {
     "@storybook/builder-webpack5": "6.2.1",
     "@types/case-sensitive-paths-webpack-plugin": "^2.1.4",
+    "@types/compression": "^1.7.0",
     "@types/cpy": "^7.1.3",
     "@types/dotenv-webpack": "^3.0.0",
     "@types/ip": "^1.1.0",
