--- a/examples/preact-kitchen-sink/package.json
+++ b/examples/preact-kitchen-sink/package.json
@@ -29,7 +29,7 @@
     "babel-loader": "^8.2.2",
     "cross-env": "^7.0.3",
     "file-loader": "^6.2.0",
-    "preact-render-to-json": "^3.6.6",
+    "preact-render-to-string": "^5.1.18",
     "raw-loader": "^4.0.2",
     "svg-url-loader": "^7.1.1",
     "webpack": "4",
