--- a/addons/storyshots/storyshots-core/package.json
+++ b/addons/storyshots/storyshots-core/package.json
@@ -53,6 +53,7 @@
     "glob": "^7.1.6",
     "global": "^4.4.0",
     "jest-specific-snapshot": "^4.0.0",
+    "preact-render-to-string": "^5.1.18",
     "pretty-format": "^26.6.2",
     "react-test-renderer": "^16.8.0 || ^17.0.0",
     "read-pkg-up": "^7.0.1",
@@ -85,6 +86,7 @@
     "@storybook/vue3": "*",
     "jest-preset-angular": "*",
     "jest-vue-preprocessor": "*",
+    "preact": "^10.5.13",
     "react": "^16.8.0 || ^17.0.0",
     "react-dom": "^16.8.0 || ^17.0.0",
     "rxjs": "*",
@@ -112,6 +114,9 @@
       "optional": true
     },
     "jest-vue-preprocessor": {
+      "optional": true
+    },
+    "preact": {
       "optional": true
     },
     "react": {
